added relative timestamp

--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -59,6 +59,19 @@
         android:textColor="#125688"
         android:textStyle="bold" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/tvTimestamp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/ivProfilePhoto"
+        android:layout_alignBottom="@+id/ivProfilePhoto"
+        android:gravity="center_vertical"
+        android:paddingRight="10dp"
+        />
+
     <ImageView
         android:layout_width="25dp"
         android:layout_height="25dp"
