swipe to refresh additions

--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -103,4 +103,17 @@
         android:src="@drawable/greyclock"
         android:layout_marginRight="5dp"/>
 
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnPlayVideo"
+        android:layout_alignTop="@+id/ivPhoto"
+        android:layout_alignBottom="@+id/ivPhoto"
+        android:layout_alignLeft="@+id/ivPhoto"
+        android:layout_alignRight="@+id/ivPhoto"
+        android:background="@drawable/play_icon"
+        android:alpha="0.5"
+        android:visibility="gone"
+        />
+
 </RelativeLayout>
