--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -21,12 +21,12 @@
         android:text="New Text"
         android:id="@+id/tvCaption"
         android:textSize="15sp"
-        android:maxLines="3"
         android:ellipsize="end"
         android:layout_below="@+id/ivBlueHeart"
         android:layout_alignLeft="@+id/ivBlueHeart"
-        android:layout_alignStart="@+id/ivBlueHeart" />"
-         />
+        android:layout_alignStart="@+id/ivBlueHeart"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"/>
 
     <com.makeramen.roundedimageview.RoundedImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
