--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -26,7 +26,7 @@
         android:layout_alignLeft="@+id/ivBlueHeart"
         android:layout_alignStart="@+id/ivBlueHeart"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"/>
+        />
 
     <com.makeramen.roundedimageview.RoundedImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -115,5 +115,43 @@
         android:alpha="0.5"
         android:visibility="invisible"
         />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="44dp"
+        android:text="@string/view_all_x_comments"
+        android:id="@+id/btnAllComments"
+        android:layout_below="@+id/tvCaption"
+        android:layout_alignLeft="@+id/tvCaption"
+        android:layout_alignStart="@+id/tvCaption"
+        android:background="@android:color/transparent"
+        android:textAllCaps="false"
+        android:textColor="#808080"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Comment 1"
+        android:id="@+id/tvComment1"
+        android:textSize="15sp"
+        android:ellipsize="end"
+        android:layout_below="@+id/btnAllComments"
+        android:layout_alignLeft="@+id/btnAllComments"
+        android:layout_alignStart="@+id/btnAllComments"
+        android:layout_marginRight="10dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Comment 2"
+        android:id="@+id/tvComment2"
+        android:textSize="15sp"
+        android:ellipsize="end"
+        android:layout_below="@+id/tvComment1"
+        android:layout_alignLeft="@+id/tvComment1"
+        android:layout_alignStart="@+id/tvComment1"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"/>
 
 </RelativeLayout>
