--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -4,16 +4,7 @@
     android:layout_height="match_parent"
     android:background="#ffffff">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/ivPhoto"
-        android:minHeight="50dp"
-        android:adjustViewBounds="true"
-        android:scaleType="fitCenter"
-        android:layout_below="@+id/ivProfilePhoto"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -115,6 +106,29 @@
         android:alpha="0.5"
         android:visibility="gone"
         />
+
+    <VideoView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/vvInstagramVideo"
+        android:layout_alignTop="@+id/ivPhoto"
+        android:layout_alignBottom="@+id/ivPhoto"
+        android:layout_alignLeft="@+id/ivPhoto"
+        android:layout_alignRight="@+id/ivPhoto"
+        android:visibility="gone"
+        android:background="#00000000"
+        />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/ivPhoto"
+        android:minHeight="50dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        android:layout_below="@+id/ivProfilePhoto"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
